Fix spacing around code quality problem icon in diff view
Now it is not under the plus sign and the popover is displayed on hover

Changelog: fixed
EE: true

--- a/ee/app/assets/stylesheets/framework/diffs.scss
+++ b/ee/app/assets/stylesheets/framework/diffs.scss
@@ -6,7 +6,7 @@
     grid-template-columns: 50px 8px 20px 1fr;
   }
 
-  &.inline {
+  &.inline-diff-view {
     .diff-grid-left {
       grid-template-columns: 50px 50px 8px 20px 1fr;
     }
